# bot_ws_2

./: .gitignore  dump.txt  gps_coordinates.txt  howto.txt  run.sh
src/bob/: CMakeLists.txt  package.xml
src/bob/config_another/: costmap_common_params.yaml  costmap_exploration_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  teb_local_planner_params.yaml  teb_planner.yaml
src/bob/config_save/: costmap_common_params.yaml  dwa_local_planner.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
src/bob/launch/: movebase_amcl.launch  movebase_another.launch  movebase_node.launch  realsense_mapping.launch  robot_description.launch
src/bob/msg/: YoloResult.msg
src/bob/rviz/: realsense_movebase.rviz
src/bob/urdf/: bob.gazebo  bob.xacro
src/depthcam/: CMakeLists.txt  package.xml
src/depthcam/launch/: cppfile.launch  pc.launch
src/depthcam/rviz/: another.rviz  point_cloud.rviz
src/depthcam/src/: depthcam_node.cpp
src/fourbot/: CMakeLists.txt  package.xml
src/fourbot/config_save/: costmap_common_params.yaml  dwa_local_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/fourbot/launch/: mars_gazebo.launch  movebase_amcl.launch  movebase_combined.launch  movebase_gmapping.launch  movebase_robot.launch  pointcloid.launch  robot_description.launch  rviz_gazebo.launch  temp_amcl_map.launch  temp_map.launch  trav_with_map.launch
src/fourbot/maps/: obstacle_map.pgm  obstacle_map.yaml
src/fourbot/src/: depth_distance.py  depth_node.py  dynamic_window.py  gps_publish.py  img_node.cpp  imu_subscribe.py  init_pose_estimate.py  movement_depth.py
src/fourbot/urdf/: fourbot.gazebo  fourbot.xacro  temp_fourbot.gazebo  temp_fourbot.xacro
src/fourbot/worlds/: arrows.world  empty.world  mapping.rviz  mars_noarrows.world  obstacle_course.world  ouster_lidar.rviz  rviz_config.rviz  rviz_config_depth.rviz  simple.rviz  trav.rviz  trav2.rviz
src/publisher_subscriber/: CMakeLists.txt  package.xml
src/publisher_subscriber/launch/: union.launch
src/publisher_subscriber/src/: service_client.cpp  service_server.cpp  topic_publisher.cpp  topic_subscriber.cpp
src/rover_control/: CMakeLists.txt  package.xml
src/rover_control/msg/: rover_wheels.msg
src/rover_control/srcipts/: rover_wheels.py
src/sensor_control/: CMakeLists.txt  package.xml
src/sensor_control/launch/: fake_gps_launch.launch
src/sensor_control/msg/: gps_msg.msg
src/sensor_control/src/: fake_gps_publisher.py  fake_gps_subscriber.py  gps_android.py  gps_data.py  gps_publisher.py  imu_subscriber.py
src/simple_navigation_goals/: CMakeLists.txt  package.xml
src/simple_navigation_goals/launch/: launch.launch
src/simple_navigation_goals/src/: basic_goal_publish.py  camera.py  cmd_to_ack.py  cone_confirm.py  fake_gps.py  gps_get_publish.py  gps_publish.py  kill_rover.py  move_fs.py  new_camera.py  no_goal_move_fs.py  old_camera.py  old_move_fs.py  publish.py  pyserial2.py  relaunch_cmd.py  remove_fs.py  simple_navigation_goals.py
src/terrain/: CMakeLists.txt  package.xml
src/terrain/models/: arrow3.stl
src/terrain/models/Pole/: model.sdf
src/terrain/models/arrow_red/: model.config  model.sdf
src/terrain/models/walls/: model.sdf
src/terrain/worlds/: terrain_world.world
src/vision/: package.xml
src/vision/Model/: keras_metadata.pb  saved_model.pb
src/vision/Model/variables/: variables.index
src/vision/launch/: color_tracker.launch  color_tracker_publisher.launch
src/vision/src/: arrow_1.py  arrow_2.py  arrow_3.py  arrow_4.py  color_tracker.py  color_tracker_publisher.py  degree_detection.py  fake_arrow.py  keras_tf_model.py  keras_tf_publisher.py
