cmake_minimum_required(VERSION 3.0.2)
project(bob)
# set(CMAKE_CXX_STANDARD 14)
# if(NOT DEFINED CMAKE_SUPPRESS_DEVELOPER_WARNINGS)
#   set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "No dev warnings")
# endif()


find_package(catkin REQUIRED COMPONENTS
  cv_bridge
  geometry_msgs
  image_geometry
  image_transport
  message_filters
  message_generation
  message_runtime
  pcl_ros
  roscpp
  rospy
  sensor_msgs
  std_msgs
  tf2_ros
  vision_msgs
  visualization_msgs
  message_generation
)

## System dependencies are found with CMake's conventions
find_package(Boost REQUIRED COMPONENTS system)
find_package(Boost REQUIRED)
find_package(OpenCV REQUIRED)
find_package(PCL REQUIRED)

add_message_files(FILES YoloResult.msg)

generate_messages(
  DEPENDENCIES
  sensor_msgs
  std_msgs
  vision_msgs
)



# catkin_package(
#   INCLUDE_DIRS include
#   CATKIN_DEPENDS
#     cv_bridge
#     geometry_msgs
#     image_geometry
#     image_transport
#     message_filters
#     message_runtime
#     pcl_ros
#     roscpp
#     rospy
#     sensor_msgs
#     std_msgs
#     tf2_ros
#     vision_msgs
#     visualization_msgs
#     message_generation
# )


include_directories(
  include
  ${catkin_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${OpenCV_INCLUDE_DIRS}
  ${PCL_INCLUDE_DIRS}
)

install(PROGRAMS
  script/tracker_node.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

# install(DIRECTORY include
#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
# )

install(FILES
  ${PROJECT_NAME}/launch/world.launch
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)
