<?xml version="1.0"?>
<package format="2">
  <name>bob</name>
  <version>0.0.0</version>
  <description>The bob package</description>

  <maintainer email="alexii@todo.todo">alexii</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rviz</exec_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>  


  <export></export>
</package>
