<?xml version="1.0"?>
<package format="2">
  <name>publisher_subscriber</name>
  <version>1.0.0</version>
  <description>The publisher_subscriber package</description>

  <maintainer email="alexii@todo.todo">alexii</maintainer>

  <license>Apache License 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>  

  <export></export>
</package>
